new file:   images/camping.jpg 	new file:   images/facebook.png 	new file:   images/fire_icon.png 	new file:   images/hero.png 	modified:   index.html WhiteWaterRaftingSiteOriginal.html 	images/instagram.png 	images/logo.png 	images/mountains.jpg 	images/oars.png 	images/rapids.jpg 	images/river_icon.png 	images/rivers.jpg 	images/twitter.png

--- a/index.html
+++ b/index.html
@@ -3,18 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All about me</title>
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <img alt="Image of me" src="images\Attempt2.jpg"
-    width="150"
-    height="225">
-        <h2>Byron Bursett</h2>
-        <h3>Bison</h3>
-        <p>Hey everyone! I'm Byron Bursett and I am from Bakersfield California! It is a pretty big town with a lot to do but it is always hot there. There are lots of great mountains, beaches, and theme parks nearby that make up for it.</p>
-        <p>I have quite a few different hobbies and skills that I have pursued. One of my favorites is music. I play the drums, clarinet, ocarina, recorder, and even a little piano. I also absolutely love singing and I take any opportunity I can to sing</p>
-        <p>I have been a member of the church for my whole life, but I have had some incredible experiences before, during, and after my mission that really grew my testimony and made me into the person I am today. One of my all time favorite quotes is this one from President Nelson: “In coming days, we will see the greatest manifestations of the Savior's power that the world has ever seen. Between now and the time he returns 'with power and great glory,' he will bestow countless privileges, blessings and miracles upon the faithful.” This quote reminds me that God has a plan for us even when times are dark and hardships happen. I know that God will always bless us and I am always amazed by the miracles I see in my life</p>
-        <p>Aside from that I am just grateful to be here in this course. I love computers and learning about how they work. I am currently pursuing a degree in computer science and hope to solve problems and use technology to make things more efficient. I'm also really excited to get to know y'all</p>
+    <header>
+        <a id="logo_link" href="index.html">
+        <img class="logo" src="images/logo.png" alt="Dry Oar Logo"
+        </a>
+        <nav>
+            <a> href="index.html">Home</a>
+            <a> href="#">Page 2</a>
+            <a> href="site-plan-rafting.html">Site Plan</a>
+            <a> href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories With Dry Oar</h4>
+            <div class='button-box'
+                <a class='book' href="contactus.html">Book Now</a>
+            </div>
+        </section>
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-image" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains"
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Take part in the great outdoors! Leave the hum drum of society and explore nature and all that it has to offer! Explore the valleys, meadows, canyons, and mountain ranges.</p>
+            <a class='join' href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+    </footer>
 </body>
 </html>
