--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <div id="content">
+        <header>
         <a id="logo_link" href="index.html">
         <img class="logo" src="images/logo.png" alt="Dry Oar Logo"
         </a>
@@ -16,8 +18,8 @@
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
-    </header>
-    <div id="hero">
+        </header>
+        <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
@@ -25,12 +27,12 @@
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories With Dry Oar</h4>
             <div class='button-box'
-                <a class='book' href="contactus.html">Book Now</a>
+                <a class="book" href="contactus.html">Book Now</a>
             </div>
         </section>
-    </div>
-    <main class="home-grid">
-        <section class="rivers-card">
+        </div>
+        <main class="home-grid">
+            <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
@@ -45,28 +47,31 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains"
         <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Take part in the great outdoors! Leave the hum drum of society and explore nature and all that it has to offer! Explore the valleys, meadows, canyons, and mountain ranges.</p>
-            <a class='join' href="rivers.html">Join Us</a>
+            <h2 class="center">More Than Just The Thrill</h2>
+            <p class="center">Take part in the great outdoors! Leave the hum drum of society and explore nature and all that it has to offer! Explore the valleys, meadows, canyons, and mountain ranges.</p>
+            <a class="join, center" href="rivers.html">Join Us</a>
+            
         </section>
-    </main>
-    <footer>
-        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
-    <p><a href="site-plan-rafting.html">Site Plan</a></p>
-    <p><a href="contactus.html">Contact Us</a></p>
-    <div class="social">
-        <a href="https://facebook.com">
+        </main>
+        <footer>
+            <p>Dry Oar &copy; 2023 - Byron Bursett</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+            <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
+        </div>
+        </footer>
     </div>
-    </footer>
 </body>
 </html>
