--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+        <title>Whitewater Rafting Vacations | Dry Oar Boating | Events Page</title>
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
@@ -14,11 +14,23 @@
                 </a>
                 <nav>
                     <a href="index.html">Home</a>
-                    <a href="Page2.html">Events</a>
+                    <a href="events.html">Events</a>
                     <a href="site-plan-rafting.html">Site Plan</a>
                     <a href="contactus.html">Contact Us</a>
                 </nav>
             </header>
+            <div id="hero">
+                <div id="hero-box">
+                    <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+                </div>
+                <section id="hero-msg">
+                    <h1 class="home-title">Have An Adventure</h1>
+                    <h4>Make Memories With Dry Oar</h4>
+                    <div class='button-box'>
+                        <a class="book" href="contactus.html">Book Now</a>
+                    </div>
+                </section>
+            </div>
         </div>
         <section id="events-msg">
             <h1 class="home-title">Upcoming Events and Tours</h1>
